--- a/login.html
+++ b/login.html
@@ -16,9 +16,53 @@
     </div>
     <!-- 创建中间盒子 -->
     <div class="context">
+        <!-- 头部 -->
         <div class="context_title">
         </div>
+        <!-- 登录 -->
+        <div class="login_box">
+            <form class="layui-form" action="">
+                <div class="layui-form-item">
+                    <input type="text" name="username" required lay-verify="required" placeholder="请输入账号"
+                        autocomplete="off" class="layui-input">
+                </div>
+                <div class="layui-form-item">
+                    <input type="text" name="password" required lay-verify="required" placeholder="请输入密码"
+                        autocomplete="off" class="layui-input">
+                </div>
+                <div class="layui-form-item">
+                    <button class="layui-btn layui-btn-fluid" lay-submit lay-filter="formDemo ">立即提交</button>
+                </div>
+            </form>
+            <div class="layui-form-item box_a">
+                <a href="javascript:;" id="reg_link">没有账号，去注册</a>
+            </div>
+        </div>
+        <div class="reg_box">
+            <form class="layui-form" action="">
+                <div class="layui-form-item">
+                    <input type="text" name="username" required lay-verify="required" placeholder="请输入账号"
+                        autocomplete="off" class="layui-input">
+                </div>
+                <div class="layui-form-item">
+                    <input type="text" name="password" required lay-verify="required" placeholder="请输入密码"
+                        autocomplete="off" class="layui-input">
+                </div>
+                <div class="layui-form-item">
+                    <input type="text" name="password_end" required lay-verify="required" placeholder="请再次输入密码"
+                        autocomplete="off" class="layui-input">
+                </div>
+                <div class="layui-form-item">
+                    <button class="layui-btn layui-btn-fluid" lay-submit lay-filter="formDemo ">立即提交</button>
+                </div>
+            </form>
+            <div class="layui-form-item box_a">
+                <a href="javascript:;" id="login_link">已有账号，去登录</a>
+            </div>
+        </div>
     </div>
+    <script src="./assets/lib/jquery.js"></script>
+    <script src="./assets/js/login.js"></script>
 </body>
 
 </html>
