--- a/login.html
+++ b/login.html
@@ -23,15 +23,18 @@
         <div class="login_box">
             <form class="layui-form" action="">
                 <div class="layui-form-item">
+                    <i class="layui-icon layui-icon-username"></i>
                     <input type="text" name="username" required lay-verify="required" placeholder="请输入账号"
                         autocomplete="off" class="layui-input">
                 </div>
                 <div class="layui-form-item">
-                    <input type="text" name="password" required lay-verify="required" placeholder="请输入密码"
+                    <i class="layui-icon layui-icon-password"></i>
+                    <input type="password" name="password" required lay-verify="required|pwd" placeholder="请输入密码"
                         autocomplete="off" class="layui-input">
                 </div>
                 <div class="layui-form-item">
-                    <button class="layui-btn layui-btn-fluid" lay-submit lay-filter="formDemo ">立即提交</button>
+                    <button class="layui-btn layui-btn-fluid layui-bg-blue" lay-submit
+                        lay-filter="formDemo ">登录</button>
                 </div>
             </form>
             <div class="layui-form-item box_a">
@@ -41,19 +44,23 @@
         <div class="reg_box">
             <form class="layui-form" action="">
                 <div class="layui-form-item">
+                    <i class="layui-icon layui-icon-username"></i>
                     <input type="text" name="username" required lay-verify="required" placeholder="请输入账号"
                         autocomplete="off" class="layui-input">
                 </div>
                 <div class="layui-form-item">
-                    <input type="text" name="password" required lay-verify="required" placeholder="请输入密码"
+                    <i class="layui-icon layui-icon-password"></i>
+                    <input type="password" name="password" required lay-verify="required|pwd" placeholder="请输入密码"
                         autocomplete="off" class="layui-input">
                 </div>
                 <div class="layui-form-item">
-                    <input type="text" name="password_end" required lay-verify="required" placeholder="请再次输入密码"
+                    <i class="layui-icon layui-icon-password"></i>
+                    <input type="password" name="password_end" required lay-verify="required" placeholder="请再次输入密码"
                         autocomplete="off" class="layui-input">
                 </div>
                 <div class="layui-form-item">
-                    <button class="layui-btn layui-btn-fluid" lay-submit lay-filter="formDemo ">立即提交</button>
+                    <button class="layui-btn layui-btn-fluid layui-bg-blue" lay-submit
+                        lay-filter="formDemo ">立即提交</button>
                 </div>
             </form>
             <div class="layui-form-item box_a">
@@ -61,8 +68,10 @@
             </div>
         </div>
     </div>
+    <script src="./assets/lib/layui/layui.all.js"></script>
     <script src="./assets/lib/jquery.js"></script>
     <script src="./assets/js/login.js"></script>
+
 </body>
 
 </html>
