完成注册登录页面

--- a/login.html
+++ b/login.html
@@ -55,8 +55,8 @@
                 </div>
                 <div class="layui-form-item">
                     <i class="layui-icon layui-icon-password"></i>
-                    <input type="password" name="password_end" required lay-verify="required|re_pwd" placeholder="请再次输入密码"
-                        autocomplete="off" class="layui-input">
+                    <input type="password" name="password_end" required lay-verify="required|re_pwd"
+                        placeholder="请再次输入密码" autocomplete="off" class="layui-input">
                 </div>
                 <div class="layui-form-item">
                     <button class="layui-btn layui-btn-fluid layui-bg-blue" lay-submit
@@ -69,9 +69,10 @@
         </div>
     </div>
     <script src="./assets/lib/layui/layui.all.js"></script>
-    <script src="./assets/lib/jquery.js"></script>
-    <script src="./assets/js/login.js"></script>
 
+    <script src="./assets/lib/jquery.js"></script>
+    <script src="./assets/js/baseAPI.js"></script>
+    <script src="./assets/js/login.js"></script>
 </body>
 
 </html>
