--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <li class="layui-nav-item">
                         <a class="" href="javascript:;"><i class="layui-icon layui-icon-file-b"></i>文章管理</a>
                         <dl class="layui-nav-child">
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>文章类别</a></dd>
+                            <dd><a href="./text/user_text.html" target="fm"><i class="layui-icon layui-icon-app"></i>文章类别</a></dd>
                             <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>文章列表</a></dd>
                             <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>文章发布</a></dd>
 
@@ -56,7 +56,7 @@
                         <a href="javascript:;"><i class="layui-icon layui-icon-friends"></i>个人中心</a>
                         <dl class="layui-nav-child">
                             <dd><a href="./user/user_inof.html" target="fm"><i class="layui-icon layui-icon-app"></i>基本资料</a></dd>
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>更换头像</a></dd>
+                            <dd><a href="./user/user_pice.html" target="fm"><i class="layui-icon layui-icon-app"></i>更换头像</a></dd>
                             <dd><a href="./user/user_pwd.html" target="fm"><i class="layui-icon layui-icon-app"></i>重置密码</a></dd>
 
                         </dl>
