--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 
                     </dl>
                 </li>
-                <li class="layui-nav-item"><a href="javascript:;" class="tui"><i class="layui-icon layui-icon-refresh-1">&#xe682;</i>退出</a></li>
+                <li class="layui-nav-item"><a href="javascript:;" class="tui"><i
+                            class="layui-icon layui-icon-refresh-1">&#xe682;</i>退出</a></li>
             </ul>
         </div>
 
@@ -42,22 +43,28 @@
                     <span class="hello">欢迎###</span>
                 </div>
                 <ul class="layui-nav layui-nav-tree " lay-shrink="all" lay-filter="test">
-                    <li class="layui-nav-item"><a href="./home/dashboard.html" target="fm"><i class="layui-icon layui-icon-home"></i>首页</a></li>
+                    <li class="layui-nav-item"><a href="./home/dashboard.html" target="fm"><i
+                                class="layui-icon layui-icon-home"></i>首页</a></li>
                     <li class="layui-nav-item">
                         <a class="" href="javascript:;"><i class="layui-icon layui-icon-file-b"></i>文章管理</a>
                         <dl class="layui-nav-child">
-                            <dd><a href="./text/user_text.html" target="fm"><i class="layui-icon layui-icon-app"></i>文章类别</a></dd>
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>文章列表</a></dd>
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>文章发布</a></dd>
+                            <dd><a href="./text/user_text.html" target="fm"><i
+                                        class="layui-icon layui-icon-app"></i>文章类别</a></dd>
+                            <dd><a href="./text/user_list.html" target="fm"><i
+                                        class="layui-icon layui-icon-app"></i>文章列表</a></dd>
+                            <dd><a href="/text/text_put.html" target="fm"><i class="layui-icon layui-icon-app"></i>文章发布</a></dd>
 
                         </dl>
                     </li>
                     <li class="layui-nav-item">
                         <a href="javascript:;"><i class="layui-icon layui-icon-friends"></i>个人中心</a>
                         <dl class="layui-nav-child">
-                            <dd><a href="./user/user_inof.html" target="fm"><i class="layui-icon layui-icon-app"></i>基本资料</a></dd>
-                            <dd><a href="./user/user_pice.html" target="fm"><i class="layui-icon layui-icon-app"></i>更换头像</a></dd>
-                            <dd><a href="./user/user_pwd.html" target="fm"><i class="layui-icon layui-icon-app"></i>重置密码</a></dd>
+                            <dd><a href="./user/user_inof.html" target="fm"><i
+                                        class="layui-icon layui-icon-app"></i>基本资料</a></dd>
+                            <dd><a href="./user/user_pice.html" target="fm"><i
+                                        class="layui-icon layui-icon-app"></i>更换头像</a></dd>
+                            <dd><a href="./user/user_pwd.html" target="fm"><i
+                                        class="layui-icon layui-icon-app"></i>重置密码</a></dd>
 
                         </dl>
                     </li>
@@ -68,7 +75,7 @@
 
         <div class="layui-body">
             <!-- 内容主体区域 -->
-                <iframe src="./home/dashboard.html" frameborder="0" name="fm"></iframe>
+            <iframe src="./home/dashboard.html" frameborder="0" name="fm"></iframe>
         </div>
 
         <div class="layui-footer">
