--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                             <dd><a href="./text/user_text.html" target="fm"><i
                                         class="layui-icon layui-icon-app"></i>文章类别</a></dd>
                             <dd><a href="./text/user_list.html" target="fm"><i
-                                        class="layui-icon layui-icon-app"></i>文章列表</a></dd>
+                                        class="layui-icon layui-icon-app" id="a2"></i>文章列表</a></dd>
                             <dd><a href="/text/text_put.html" target="fm"><i class="layui-icon layui-icon-app"></i>文章发布</a></dd>
 
                         </dl>
