完成了全部

--- a/text/user_list.html
+++ b/text/user_list.html
@@ -13,7 +13,7 @@
     <div class="layui-card">
         <div class="layui-card-header">文章列表</div>
         <div class="layui-card-body">
-            <form class="layui-form" action="" id="formText">
+            <form class="layui-form" id="formText">
                 <div class="layui-form-item layui-input-inline">
                     <select name="cate_id" lay-verify="" id="select">
 
